// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperimentUpdatesHandler Loads cell sets if QC pipeline completes  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "pipeline": Object {
      "status": "SUCCEEDED",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Loads cell sets if QC pipeline completes  2`] = `
Array [
  "mockPlotUuid",
  "mockPlotData",
]
`;

exports[`ExperimentUpdatesHandler Loads cell sets if QC pipeline completes  3`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  true,
]
`;

exports[`ExperimentUpdatesHandler Throws error if there are errors in GEM2S updates  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "pipeline": Object {
      "status": "ERROR",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Throws error if there are errors in QC updates  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "pipeline": Object {
      "status": "ERROR",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Triggers properly for GEM2S updates  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "pipeline": Object {
      "status": "RUNNING",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Triggers properly for GEM2S updates  2`] = `undefined`;

exports[`ExperimentUpdatesHandler Triggers properly for QC updates  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "pipeline": Object {
      "status": "RUNNING",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Triggers properly for QC updates  2`] = `
Array [
  "mockTaskName",
  Object {
    "processingConfigUpdate": Object {
      "mockProcessingConfigUpdate": "mockProcessingConfigUpdate",
    },
  },
  "mockSampleUuid",
  false,
]
`;

exports[`ExperimentUpdatesHandler Triggers properly for QC updates  3`] = `
Array [
  "mockPlotUuid",
  "mockPlotData",
]
`;
